2011-11-11 arnaud.fontaine
* Fix document conversion not being performed when data is set directly.

2011-10-24 Kazuhiko
* make telephone field searchable in person_module view and organisation_module view.

2011-07-01 yusei
* Set proper title to interaction workflow.

2011-04-04 Kazuhiko
* configure searchable text property ids and method ids for Address, Chat Address, Email, Fax, Link and Telephone.

2011-03-02 Kazuhiko
* cleanup document_security_interaction_workflow.

2011-01-04 Ivan
* Add upgrader alarm that is able to handle migration of embedded "File" & "Image" objects to "Embedded File" portal type

2010-12-23 Kazuhiko
* use my_filename instead of my_source_reference in File_view and Image_view.

2010-12-22 Ivan
* Add "Embedded File"  & "Embedded Folder" portal types

2010-12-13 nicolas.dumazet
* Migrate Tools.

2010-11-29 lucas
* Added proxy role in reindex_object_interaction_workflow/scripts/callRecursiveReindexObject to avoid security issues.

2010-11-15 Kazuhiko
* improve Document_getStandardFileName so that the extention in the original filename will be used as the fallback.

2010-10-13 yo
* Drop Decimal Exponent and change Precision to a Float Field (through Proxy Field) in the view of Rounding Model.

2010-10-12 yo
* Fix an error that calculate may be called too early before a new simulation movement is indexed.

2010-10-12 yo
* Tweak the configurations of several interaction workflows for optimization.

2010-09-30 yusei
* Update movement_resource_interaction_workflow and set quantity unit value to movement forcedly if current value is acquired from resource.

2010-09-28 tatuya
* Fix a issue that all the base contribution are not copied when change the resource on a movement.

2010-09-28 tatuya
* Stop overwriting a value by movement_resource_interaraction_workflow when the categories are already set a valid value as the new resource.

2010-09-28 tatuya